--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,28 @@
-.App {
-  text-align: center;
+*,
+*::after,
+*::before{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+html,body,#root{
+  height: 100%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.center{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.doge-logo {
+  height: 40vmin;
+  border-radius: 50%;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +32,50 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .doge-logo {
+    animation: App-logo-spin infinite 5s linear;
+  }
+}
+
+
+
+/*  video troll */
+
+
+
+.video{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  object-fit: cover;
+  z-index: 0;
+
+}
+
+.container{
+  position: relative;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+
+  
+}
+
+.title-portfolio{
+  color: white;
+  font-weight: 900;
+  font-size: 5rem;
+  /* box-shadow: 1rem 1rem 1rem skyblue ; */
+
+  text-shadow: 1rem 1rem 1rem rgb(100, 24, 199), 1rem 0.5rem 1em rgb(231, 228, 46), 1rem 0rem 2rem rgb(255, 0, 0);
 }
